--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <ul>
           <li><a class="bolts" href="academics.html">Academics</a></li>
           <li><a class="bolts" href="arts.html">Arts</a></li>
+          <li><a class="bolts" href="sports.html">Sports</a></li>
         </ul>
       </nav>
       <header class="container">
