--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homeeage</title>
+    <title>Homepage</title>
     <meta name="description" content="A classic website to describe the importance of Extracurricular Activities for Students.">
     <link rel="shortcut icon" href="https://picocss.com/favicon.ico">
 
