--- a/sports.html
+++ b/sports.html
@@ -62,10 +62,10 @@
                 </div>
     
                 <aside>
-                    <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab.png" alt="Architecture"></a>
+                    <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/fencing.jpg" alt="Fencing"></a>
                     <p>
-                    <a href="#" onclick="event.preventDefault()">Robotics</a><br>
-                    <small>Let the children manipulate robot hardware (nuts and bolts)</small>
+                    <a href="#" onclick="event.preventDefault()">Fencing</a><br>
+                    <small>........</small> <!--write here photo from https://commons.wikimedia.org/wiki/File:Final_Trophee_Monal_2012_n08.jpg-->
                     </p>
                     <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab2.jpg" alt="Architecture"></a>
                     <p>
