--- a/sports.html
+++ b/sports.html
@@ -67,10 +67,10 @@
                     <a href="#" onclick="event.preventDefault()">Fencing</a><br>
                     <small>........</small> <!--write here photo from https://commons.wikimedia.org/wiki/File:Final_Trophee_Monal_2012_n08.jpg-->
                     </p>
-                    <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab2.jpg" alt="Architecture"></a>
+                    <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/swimming.jpg" alt="Swimming"></a>
                     <p>
-                    <a href="#" onclick="event.preventDefault()">Robotics</a><br>
-                    <small>Explore simple circuits while discussing the inner workings of robots.</small>
+                    <a href="#" onclick="event.preventDefault()">Swimming</a><br>
+                    <small>.......</small> <!--write more, photo from https://commons.wikimedia.org/wiki/File:H%C3%A0bit_Saludable.jpg -->
                     </p>
                     
                 </aside>
