changes to some indents and images

--- a/academics.html
+++ b/academics.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Extracurricular Examples - Academics</title>
     <meta name="description" content="Extracurricular Examples - Academics">
+    <meta name="author" content="Clarisa Jimenez and Steven Orechow">
+    <meta name="keywords" content="academics, school, extracurricular activities, students">
     <link rel="shortcut icon" href="https://picocss.com/favicon.ico">
 
     <!-- Pico.css -->
@@ -45,19 +47,19 @@
         <div>
 
           <article id="Academics" class="mt-0">
-          <h3>Extracurricular Examples - Academics</h3>
-          <p>Every school and college has various clubs and groups centred around academics. If you are interested in astronomy or international relations, joining your school's astronomy club or math club can not only enhance your portfolio but also give you a broader perspective on how to apply these skills in the real world. Some other examples of academic and extracurricular activities include:</p>
-          <ul>
-            <li>Math club</li>
-            <li>Chemistry club</li>
-            <li>Debate club</li>
-            <li>Student government body</li>
-            <li>Community service</li>
-            <li>Book club</li>
-            <li>Guiz club</li>
-            <li>Poetry club</li>
-          </ul>
-        </article>
+            <h3>Extracurricular Examples - Academics</h3>
+            <p>Every school and college has various clubs and groups centred around academics. If you are interested in astronomy or international relations, joining your school's astronomy club or math club can not only enhance your portfolio but also give you a broader perspective on how to apply these skills in the real world. Some other examples of academic and extracurricular activities include:</p>
+            <ul>
+              <li>Math club</li>
+              <li>Chemistry club</li>
+              <li>Debate club</li>
+              <li>Student government body</li>
+              <li>Community service</li>
+              <li>Book club</li>
+              <li>Guiz club</li>
+              <li>Poetry club</li>
+            </ul>
+          </article>
 
         </div>
 
@@ -80,7 +82,7 @@
 
   
     <!-- Footer -->
-<div class="hero" data-theme="dark">
+    <div class="hero" data-theme="dark">
       <nav class="container-fluid">
         <ul>
           <li><a href="./" class="contrast" onclick="event.preventDefault()"><strong>HitToLearn</strong></a></li>
