--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage</title>
+    <meta name="author" content="Clarisa Jimenez and Steven Orechow">
+    <meta name="keywords" content="school, extracurricular activities, students">
     <meta name="description" content="A classic website to describe the importance of Extracurricular Activities for Students.">
     <link rel="shortcut icon" href="https://picocss.com/favicon.ico">
 
@@ -43,54 +45,54 @@
 
         <div>
           <article class="mt-0">
-          <hgroup>
-            <h2>Table of Contents</h2>
-            <p></p>
-          </hgroup>
-          <ul>
-            <li><a href="#What">What are extracurricular activities?</a></li>
-            <li><a href="#Why">Why are extracurricular activities in school important for kids?</a></li>
-            <li><a href="#Benefits">Benefits of extracurricular activities for students</a></li>
-          </ul>
+            <hgroup>
+              <h2>Table of Contents</h2>
+              <p></p>
+            </hgroup>
+            <ul>
+              <li><a href="#What">What are extracurricular activities?</a></li>
+              <li><a href="#Why">Why are extracurricular activities in school important for kids?</a></li>
+              <li><a href="#Benefits">Benefits of extracurricular activities for students</a></li>
+            </ul>
           </article>
 
           <article id="What">
-          <h3>What are extracurricular activities?</h3>
-          <p>We have found questions like “How important are extracurricular activities?” and “Do they really benefit my child?” “It is not part of their academic requirements. Will it benefit their career?” and “Will it add value to my child’s knowledge?” Frequently pops into parents’ minds. It is believed that even top-performing students may not be able to meet their full potential without the opportunity to broaden and diversify their interests and skills with the help of extracurricular activities. In many ways, the benefits of extracurricular activities for students are primarily in shaping the personalities of children along with lighting up their fun moments.</p>
-          <p>Although essential, good grades are not the only aspect that helps in your child’s future career. Having a successful career needs more than just bookish knowledge; these extra qualities can be obtained by engaging in activities outside the classroom. Let’s dive into what extracurriculars are and how children can benefit from them.</p>
-        </article>
+            <h3>What are extracurricular activities?</h3>
+            <p>We have found questions like “How important are extracurricular activities?” and “Do they really benefit my child?” “It is not part of their academic requirements. Will it benefit their career?” and “Will it add value to my child’s knowledge?” Frequently pops into parents’ minds. It is believed that even top-performing students may not be able to meet their full potential without the opportunity to broaden and diversify their interests and skills with the help of extracurricular activities. In many ways, the benefits of extracurricular activities for students are primarily in shaping the personalities of children along with lighting up their fun moments.</p>
+            <p>Although essential, good grades are not the only aspect that helps in your child’s future career. Having a successful career needs more than just bookish knowledge; these extra qualities can be obtained by engaging in activities outside the classroom. Let’s dive into what extracurriculars are and how children can benefit from them.</p>
+          </article>
           <figure>
             <img src="images/main_img.png" alt="Architecture">
             <figcaption>Image from <a href="#" target="_blank">HitAndMatch</a></figcaption>
           </figure>
 
           <article id="Why">
-          <h3>Importance of extracurricular activities in school</h3>
-          
-          <ul>
-            <li>Extracurricular activities help children to develop their social skills and learn how to work in a team to achieve a shared goal. </li>
-            <li>These activities allow your child the opportunity to explore different areas of interest, increase self-confidence, build leadership skills and even improve grades — all while having fun!</li>
-            <li>Extracurricular activities in school teach life lessons that are often not taught at school or home such as how to accept failure even when one thinks one deserves to win.</li>
-            <li>Extracurricular activities in school provide opportunities for kids that can’t be replicated anywhere else–learning about teamwork, developing strong communications skills (or introversion), experiencing what it’s like being on stage with an audience watching you. </li>
-            <li>Time management skills are one big life lesson extracurricular activities have to teach!</li>
-            <li>Extracurricular activities in school also teach your children how to work collaboratively without bullying others. This is an important skill these days where it’s often tough just being in school because of the competitiveness!</li>
-            <li>Studying for prolonged hours will of course irritate the child and the study won’t be beneficial either. Extracurricular activities in school can be a part of a break between studying hours. extra-curricular activities can be like extra study hours and an opportunity for children to learn new things. </li>
-          </ul>
+            <h3>Importance of extracurricular activities in school</h3>
+            
+            <ul>
+              <li>Extracurricular activities help children to develop their social skills and learn how to work in a team to achieve a shared goal. </li>
+              <li>These activities allow your child the opportunity to explore different areas of interest, increase self-confidence, build leadership skills and even improve grades — all while having fun!</li>
+              <li>Extracurricular activities in school teach life lessons that are often not taught at school or home such as how to accept failure even when one thinks one deserves to win.</li>
+              <li>Extracurricular activities in school provide opportunities for kids that can’t be replicated anywhere else–learning about teamwork, developing strong communications skills (or introversion), experiencing what it’s like being on stage with an audience watching you. </li>
+              <li>Time management skills are one big life lesson extracurricular activities have to teach!</li>
+              <li>Extracurricular activities in school also teach your children how to work collaboratively without bullying others. This is an important skill these days where it’s often tough just being in school because of the competitiveness!</li>
+              <li>Studying for prolonged hours will of course irritate the child and the study won’t be beneficial either. Extracurricular activities in school can be a part of a break between studying hours. extra-curricular activities can be like extra study hours and an opportunity for children to learn new things. </li>
+            </ul>
           </article>
 
 
           <article id="Benefits">
-          <h3>Benefits of extracurricular activities for students</h3>
-          <ul>
-            <li>Excel in academics</li>
-            <li>Social circle </li>
-            <li>Making the child future-ready</li>
-            <li>Time management</li>
-            <li>Explore interests</li>
-            <li>Broader perspectives</li>
-            <li>Self-esteem</li>
-            <li>Break from studies</li>
-          </ul>
+            <h3>Benefits of extracurricular activities for students</h3>
+            <ul>
+              <li>Excel in academics</li>
+              <li>Social circle </li>
+              <li>Making the child future-ready</li>
+              <li>Time management</li>
+              <li>Explore interests</li>
+              <li>Broader perspectives</li>
+              <li>Self-esteem</li>
+              <li>Break from studies</li>
+            </ul>
           </article>
 
 
