--- a/sports.html
+++ b/sports.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Extracurricular Examples - Sports</title>
         <meta name="description" content="Extracurricular Examples - Sports">
+        <meta name="author" content="Clarisa Jimenez and Steven Orechow">
+        <meta name="keywords" content="sports, extracurricular activities, students">
         <link rel="shortcut icon" href="https://picocss.com/favicon.ico">   
         
         <!-- Pico.css -->
