--- a/arts.html
+++ b/arts.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Extracurricular Examples - Arts</title>
     <meta name="description" content="Extracurricular Examples - Arts">
+    <meta name="author" content="Clarisa Jimenez and Steven Orechow">
+    <meta name="keywords" content="art, extracurricular activities, students">
     <link rel="shortcut icon" href="https://picocss.com/favicon.ico">
 
     <!-- Pico.css -->
@@ -45,20 +47,20 @@
         <div>
 
           <article id="Academics" class="mt-0">
-          <h3>Extracurricular Examples - Arts</h3>
-          <p>Arts is the foundation of our cultural milieu and having artistic activities as extracurricular examples serve to highlight all-around personality development. Here are a few extracurricular activities examples that are based on the arts.</p>
-          <ul>
-            <li>Art club</li>
-            <li>Painting</li>
-            <li>Debate club</li>
-            <li>Graphic design</li>
-            <li>Community service</li>
-            <li>Book club</li>
-            <li>Guiz club</li>
-            <li>Poetry club</li>
-            <li>Ceramics</li>
-          </ul>
-        </article>
+            <h3>Extracurricular Examples - Arts</h3>
+            <p>Arts is the foundation of our cultural milieu and having artistic activities as extracurricular examples serve to highlight all-around personality development. Here are a few extracurricular activities examples that are based on the arts.</p>
+            <ul>
+              <li>Art club</li>
+              <li>Painting</li>
+              <li>Debate club</li>
+              <li>Graphic design</li>
+              <li>Community service</li>
+              <li>Book club</li>
+              <li>Guiz club</li>
+              <li>Poetry club</li>
+              <li>Ceramics</li>
+            </ul>
+          </article>
 
         </div>
 
@@ -81,7 +83,7 @@
 
   
     <!-- Footer -->
-<div class="hero" data-theme="dark">
+    <div class="hero" data-theme="dark">
       <nav class="container-fluid">
         <ul>
           <li><a href="./" class="contrast" onclick="event.preventDefault()"><strong>HitToLearn</strong></a></li>
