--- a/sports.html
+++ b/sports.html
@@ -34,7 +34,7 @@
             </nav>
             <header class="container">
             <hgroup>
-                <h1>HitAndMatch</h1>
+                <h1 class="title">HitAndMatch</h1>
                 <p>A company that describes the importance of extracurricular activities for students.</p>
             </hgroup>
             </header>
