--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
       <header class="container">
         <hgroup>
-          <h1>HitAndMatch</h1>
+          <h1 class="title">HitAndMatch</h1>
           <p>A company that describe the importance of extracurricular activities for students</p>
         </hgroup>
       </header>
