check box changes

--- a/index.html
+++ b/index.html
@@ -208,14 +208,26 @@
 
             <!-- Checkboxes -->
             <fieldset>
-              <legend><strong>Send updates</strong></legend>
-              <label for="yes">
-                <input type="checkbox" id="yes" name="yes" checked>
-                Yes
+              <legend><strong>How Did You Hear About Us?</strong></legend>
+              <label for="search engine">
+                <input type="checkbox" id="search engine" name="search engine" checked>
+                Search Engine
               </label>
-              <label for="no">
-                <input type="checkbox" id="no" name="no">
-                No
+              <label for="social media">
+                <input type="checkbox" id="social media" name="social media">
+                Social Media
+              </label>
+              <label for="ad">
+                <input type="checkbox" id="ad" name="ad" >
+                Advertisement
+              </label>
+              <label for="article">
+                <input type="checkbox" id="article" name="article">
+                Article
+              </label>
+              <label for="other">
+                <input type="checkbox" id="other" name="other">
+                Other
               </label>
             </fieldset>
 
