menu colour focus

--- a/arts.html
+++ b/arts.html
@@ -28,14 +28,14 @@
         <ul>
           <li><a class="bolts" href="index.html">Home</a></li>
           <li><a class="bolts" href="academics.html">Academics</a></li>
-          <li><a class="bolts" href="arts.html">Arts</a></li>
+          <li><a class="bolts arts" href="arts.html">Arts</a></li>
           <li><a class="bolts" href="sports.html">Sports</a></li>
         </ul>
       </nav>
       <header class="container">
         <hgroup>
           <h1 class="title">HitAndMatch</h1>
-          <p>A company that describe the importance of extracurricular activities for students</p>
+          <p>A company that describes the importance of extracurricular activities for students</p>
         </hgroup>
       </header>
     </div><!-- ./ Hero -->
