--- a/academics.html
+++ b/academics.html
@@ -27,7 +27,7 @@
         </ul>
         <ul>
           <li><a class="bolts" href="index.html">Home</a></li>
-          <li><a class="bolts" href="academics.html">Academics</a></li>
+          <li><a class="bolts academics" href="academics.html">Academics</a></li>
           <li><a class="bolts" href="arts.html">Arts</a></li>
           <li><a class="bolts" href="sports.html">Sports</a></li>
         </ul>
