--- a/sports.html
+++ b/sports.html
@@ -28,7 +28,7 @@
                 <li><a class="bolts" href="index.html">Home</a></li>
                 <li><a class="bolts" href="academics.html">Academics</a></li>
                 <li><a class="bolts" href="arts.html">Arts</a></li>
-                <li><a class="bolts" href="sports.html">Sports</a></li>
+                <li><a class="bolts sports" href="sports.html">Sports</a></li>
 
             </ul>
             </nav>
