--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
           <input type="text" id="text" name="text" placeholder="Text" maxlength="50" required>
 
           <!--email-->
-          <label class="required">Email
+          <label class="required">Email </label>
             <input name="email" type="email" size="25" maxlength="64" pattern="[a-z0-9.!+'#/_%-^|]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="youremail@domain.com" required>
-          </label>
+         
           <!--phone number-->
           <label>Phone Number
             <input name="number" type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" placeholder="8014567890">
