--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <fieldset>
               <legend><strong>How Did You Hear About Us?</strong></legend>
               <label for="search engine">
-                <input type="checkbox" id="search engine" name="search engine" checked>
+                <input type="checkbox" id="search engine" name="search engine" >
                 Search Engine
               </label>
               <label for="social media">
