--- a/academics.html
+++ b/academics.html
@@ -64,15 +64,15 @@
         </div>
 
         <aside>
-          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab.png" alt="Architecture"></a>
+          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/math.jpg" alt="Math Club"></a>
           <p>
-            <a href="#" onclick="event.preventDefault()">Robotics</a><br>
-            <small>Let the children manipulate robot hardware (nuts and bolts).</small>
+            <a href="#" onclick="event.preventDefault()">Math Club</a><br>
+            <small>Working together as a team to solve mathmatical equations and problems.</small>
           </p>
-          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab2.jpg" alt="Architecture"></a>
+          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/chemistry.jpg" alt="Chemistry Materials"></a>
           <p>
-            <a href="#" onclick="event.preventDefault()">Robotics</a><br>
-            <small>Explore simple circuits while discussing the inner workings of robots.</small>
+            <a href="#" onclick="event.preventDefault()">Chemistry Club</a><br>
+            <small>Exploring different chemical reactions and experimenting to discover new things.</small>
           </p>
           
         </aside>
