--- a/arts.html
+++ b/arts.html
@@ -65,15 +65,15 @@
         </div>
 
         <aside>
-          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab.png" alt="Architecture"></a>
+          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/painting.jpg" alt="Painting"></a>
           <p>
-            <a href="#" onclick="event.preventDefault()">Robotics</a><br>
-            <small>Let the children manipulate robot hardware (nuts and bolts)</small>
+            <a href="#" onclick="event.preventDefault()">Painting</a><br>
+            <small>Painting allows students to improve their fine motor skills and improve their creativity. </small>
           </p>
-          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab2.jpg" alt="Architecture"></a>
+          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/drawing.jpg" alt="Digital Drawing and Art"></a>
           <p>
-            <a href="#" onclick="event.preventDefault()">Robotics</a><br>
-            <small>Explore simple circuits while discussing the inner workings of robots.</small>
+            <a href="#" onclick="event.preventDefault()">Art</a><br>
+            <small>There are different forms of art that enables students to stimulate their imagination and enhance problem solving skills. </small>
           </p>
           
         </aside>
