alt image descriptions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="hero" data-theme="dark">
       <nav class="container-fluid">
         <ul>
-          <li><a href="./" class="contrast" onclick="event.preventDefault()"><img class="max_width_40" alt="logo" src="images/logo.png"></a></li>
+          <li><a href="./" class="contrast" onclick="event.preventDefault()"><img class="max_width_40" alt="HitAndMatch logo" src="images/logo.png"></a></li>
         </ul>
         <ul>
           <li><a class="bolts" href="academics.html">Academics</a></li>
@@ -62,7 +62,7 @@
             <p>Although essential, good grades are not the only aspect that helps in your child’s future career. Having a successful career needs more than just bookish knowledge; these extra qualities can be obtained by engaging in activities outside the classroom. Let’s dive into what extracurriculars are and how children can benefit from them.</p>
           </article>
           <figure>
-            <img src="images/main_img.png" alt="Architecture">
+            <img src="images/main_img.png" alt="Extracurricular Activity Examples">
             <figcaption>Image from <a href="#" target="_blank">HitAndMatch</a></figcaption>
           </figure>
 
@@ -102,17 +102,17 @@
 
 
         <aside>
-          <a href="https://www.nature.com/articles/s41599-020-00573-0" aria-label="Example" ><img src="images/lab.png" alt="Architecture"></a>
+          <a href="https://www.nature.com/articles/s41599-020-00573-0" aria-label="Example" ><img src="images/lab.png" alt="Robotics"></a>
           <p>
             <a href="https://www.nature.com/articles/s41599-020-00573-0" target="_blank">Robotics</a><br>
             <small>Let the children manipulate robot hardware (nuts and bolts)</small>
           </p>
-          <a href="https://www.nature.com/articles/s41599-020-00573-0" aria-label="Example"><img src="images/lab2.jpg" alt="Architecture"></a>
+          <a href="https://www.nature.com/articles/s41599-020-00573-0" aria-label="Example"><img src="images/lab2.jpg" alt="Computer Robotics"></a>
           <p>
             <a href="https://www.nature.com/articles/s41599-020-00573-0" target="_blank">Robotics</a><br>
             <small>Explore simple circuits while discussing the inner workings of robots.</small>
           </p>
-          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab3.jpg" alt="Architecture"></a>
+          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/lab3.jpg" alt="Robotics"></a>
           <p>
             <a href="#" onclick="event.preventDefault()">Robotics</a><br>
             <small>Make a paper robot and teach him to “climb” a string.</small>
