--- a/sports.html
+++ b/sports.html
@@ -68,12 +68,12 @@
                     <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/fencing.jpg" alt="Fencing"></a>
                     <p>
                     <a href="#" onclick="event.preventDefault()">Fencing</a><br>
-                    <small>Fencing can have many positive effects such as improving strength and endurance, coordination, confidence and much more.</small> <!--write here photo from https://commons.wikimedia.org/wiki/File:Final_Trophee_Monal_2012_n08.jpg-->
+                    <small>Fencing can have many positive effects such as improving strength and endurance, coordination, confidence and much more.</small> <!-- from https://commons.wikimedia.org/wiki/File:Final_Trophee_Monal_2012_n08.jpg-->
                     </p>
                     <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/swimming.jpg" alt="Swimming"></a>
                     <p>
                     <a href="#" onclick="event.preventDefault()">Swimming</a><br>
-                    <small>Particating in swimming will allow you to alleviate stress, improve flexibility, maintain a healthy lifestyle, and many more benefits.</small> <!--write more, photo from https://commons.wikimedia.org/wiki/File:H%C3%A0bit_Saludable.jpg -->
+                    <small>Particating in swimming will allow you to alleviate stress, improve flexibility, maintain a healthy lifestyle, and many more benefits.</small> <!-- from https://commons.wikimedia.org/wiki/File:H%C3%A0bit_Saludable.jpg -->
                     </p>
                     
                 </aside>
