--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage</title>
-    <meta name="author" content="Clarisa Jimenez and Steven Orechow">
+    <meta name="author" content="Steven Orechow & Clarisa Jimenez">
     <meta name="keywords" content="school, extracurricular activities, students">
     <meta name="description" content="A classic website to describe the importance of Extracurricular Activities for Students.">
     <link rel="shortcut icon" href="https://picocss.com/favicon.ico">
@@ -175,7 +175,7 @@
       </section><!-- ./ Tables -->
 
       <section id="form"> <!--insert email you want form submitted to-->
-        <form method="post" action="mailto:insertemail@here.com">
+        <form method="post" action="mailto:sorec574@mtroyal.ca">
           <h2>Provide Feedback</h2>
 
           <!-- Text Name-->
@@ -184,11 +184,11 @@
 
           <!--email-->
           <label class="required">Email </label>
-            <input name="email" type="email" size="25" maxlength="64" pattern="[a-z0-9.!+'#/_%-^|]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="youremail@domain.com" required>
+            <input name="email" type="email" size="25" maxlength="64" pattern="[a-z0-9.!+'#/_%-^|]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="yourname@mtroyal.ca" required>
          
           <!--phone number-->
           <label>Phone Number
-            <input name="number" type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" placeholder="8014567890">
+            <input name="number" type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" placeholder="(403) XXX-XXXX">
 
           </label>
           
