--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 
           <!-- Text Name-->
           <label for="text" class="required">Name</label>
-          <input type="text" id="text" name="text" placeholder="Text" maxlength="50" required>
+          <input type="text" id="text" name="text" placeholder="Your name" maxlength="50" required>
 
           <!--email-->
           <label class="required">Email </label>
-            <input name="email" type="email" size="25" maxlength="64" pattern="[a-z0-9.!+'#/_%-^|]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="yourname@mtroyal.ca" required>
+            <input name="email" type="email" size="25" maxlength="64" pattern="[a-z0-9.!+'#/_%-^|]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="youremail@mtroyal.ca" required>
          
           <!--phone number-->
           <label>Phone Number
