number, float and link change

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
          
           <!--phone number-->
           <label>Phone Number
-            <input name="number" type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" placeholder="(403) XXX-XXXX">
+            <input name="number" type="tel" pattern="[\(][0-9]{3}[\)][0-9]{3}[\-][0-9]{4}" placeholder="(403)XXX-XXXX">
 
           </label>
           
