comments text box

--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
               <input name="updates" type="radio" value="No">
             </label>
           </p>
+          <!--Comments input-->
+          <label class="required">Comments </label>
+          <textarea name="comments" required></textarea>
           <!-- Buttons -->
           <input type="submit" value="Submit" >
           <input type="reset" value="Clear" >
