--- a/sports.html
+++ b/sports.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
 
         <!-- Custom styles for this example -->
-        <link rel="stylesheet" href="custom.css">
+        <link rel="stylesheet" href="style/custom.css">
     </head>
 
     <body>
