Remove Pico CSS theme switcher script as per assignment requirements.

--- a/academics.html
+++ b/academics.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Extracurricular Examples - Academics</title>
     <meta name="description" content="Extracurricular Examples - Academics">
-    <meta name="author" content="Clarisa Jimenez and Steven Orechow">
+    <meta name="author" content="Steven Orechow & Clarisa Jimenez">
     <meta name="keywords" content="academics, school, extracurricular activities, students">
     <link rel="shortcut icon" href="https://picocss.com/favicon.ico">
 
@@ -90,9 +90,6 @@
 
       </nav>
     </div><!-- ./ Hero -->
-
-    <!-- Minimal theme switcher -->
-    <script src="../js/minimal-theme-switcher.js"></script>
 
   </body>
 
