Spelling and formatting corrections

--- a/academics.html
+++ b/academics.html
@@ -54,9 +54,9 @@
               <li>Chemistry club</li>
               <li>Debate club</li>
               <li>Student government body</li>
-              <li>Community service</li>
+              <li>Community services</li>
               <li>Book club</li>
-              <li>Guiz club</li>
+              <li>Quiz club</li>
               <li>Poetry club</li>
             </ul>
           </article>
