--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
 
     <!-- Hero -->
-    <div class="hero" data-theme="light">
+    <div class="hero" data-theme="dark">
       <nav class="container-fluid">
         <ul>
           <li><a href="./" class="contrast" onclick="event.preventDefault()"><img class="max_width_40" alt="HitAndMatch logo" src="images/logo.png"></a></li>
