Reformatted background patterns

--- a/arts.html
+++ b/arts.html
@@ -20,7 +20,7 @@
   <body>
 
     <!-- Hero -->
-    <div class="hero" data-theme="dark" style="background-image: url('images/gradient-3.jpg');">
+    <div class="hero" data-theme="dark" style="background-image: url('images/gradient-2.svg');">
       <nav class="container-fluid">
         <ul>
           <li><a href="index.html" class="contrast"><img class="max_width_40" alt="logo" src="images/logo.png"></a></li>
