--- a/sports.html
+++ b/sports.html
@@ -19,7 +19,7 @@
 
     <body>
         <!-- Hero -->
-        <div class="hero" data-theme="dark" style="background-image: url('images/gradient.png');">
+        <div class="hero" data-theme="dark" style="background-image: url('images/gradient-3.svg');">
             <nav class="container-fluid">
             <ul>
                 <li><a href="index.html" class="contrast"><img class="max_width_40" alt="logo" src="images/logo.png"></a></li>
