Header text styling

--- a/sports.html
+++ b/sports.html
@@ -35,7 +35,7 @@
             <header class="container">
             <hgroup>
                 <h1 class="title">HitAndMatch</h1>
-                <p>A company that describes the importance of extracurricular activities for students.</p>
+                <p class="dark-text">A company that describes the importance of extracurricular activities for students.</p>
             </hgroup>
             </header>
         </div><!-- ./ Hero -->
