Unique selector CSS overide

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
           <!--Radio buttons-->
           <p>
-            Would You Like To Recieve Newsletters?
+            Would You Like To Receive Newsletters?
             <label> Yes
               <input name="updates" type="radio" value="Yes" >
               
