Text not appearing properly

--- a/arts.html
+++ b/arts.html
@@ -48,7 +48,7 @@
 
           <article id="Academics" class="mt-0">
             <h3>Extracurricular Examples - Arts</h3>
-            <p>Arts is the foundation of our cultural milieu and having artistic activities as extracurricular examples serve to highlight all-around personality development. Here are a few extracurricular activities examples that are based on the arts.</p>
+            <p class="light-text">Arts is the foundation of our cultural milieu and having artistic activities as extracurricular examples serve to highlight all-around personality development. Here are a few extracurricular activities examples that are based on the arts.</p>
             <ul>
               <li>Art club</li>
               <li>Painting</li>
