Dark/light text

--- a/academics.html
+++ b/academics.html
@@ -48,7 +48,7 @@
 
           <article id="Academics" class="mt-0">
             <h3>Extracurricular Examples - Academics</h3>
-            <p>Every school and college has various clubs and groups centred around academics. If you are interested in astronomy or international relations, joining your school's astronomy club or math club can not only enhance your portfolio but also give you a broader perspective on how to apply these skills in the real world. Some other examples of academic and extracurricular activities include:</p>
+            <p class="light-text">Every school and college has various clubs and groups centred around academics. If you are interested in astronomy or international relations, joining your school's astronomy club or math club can not only enhance your portfolio but also give you a broader perspective on how to apply these skills in the real world. Some other examples of academic and extracurricular activities include:</p>
             <ul>
               <li>Math club</li>
               <li>Chemistry club</li>
