--- a/academics.html
+++ b/academics.html
@@ -66,7 +66,7 @@
     <div class="hero" data-theme="dark" style="background-image: url('images/gradient-1.svg');">
       <nav class="container-fluid">
         <ul>
-          <li><a href="index.html" class="contrast"><img class="max_width_40" alt="logo" src="images/logo.png"></a></li>
+          <li><a href="index.html" class="contrast"><img class="max_width_40" alt="HitandMatch logo" src="images/logo.png"></a></li>
         </ul>
         <ul>
           <li><a class="bolts" href="index.html">Home</a></li>
@@ -90,7 +90,7 @@
         <div>
 
           <article id="Academics" class="mt-0">
-            <h3>Extracurricular Examples - Academics</h3>
+            <h2>Extracurricular Examples - Academics</h2>
             <p class="light-text">Every school and college has various clubs and groups centred around academics. If you are interested in astronomy or international relations, joining your school's astronomy club or math club can not only enhance your portfolio but also give you a broader perspective on how to apply these skills in the real world. Some other examples of academic and extracurricular activities include:</p>
             <ul>
               <li>Math club</li>
