--- a/sports.html
+++ b/sports.html
@@ -64,7 +64,7 @@
         <div class="hero" data-theme="dark" style="background-image: url('images/gradient-3.svg');">
             <nav class="container-fluid">
             <ul>
-                <li><a href="index.html" class="contrast"><img class="max_width_40" alt="logo" src="images/logo.png"></a></li>
+                <li><a href="index.html" class="contrast"><img class="max_width_40" alt="HitAndMatch logo" src="images/logo.png"></a></li>
             </ul>
             <ul>
                 <li><a class="bolts" href="index.html">Home</a></li>
@@ -89,7 +89,7 @@
                 <div>
     
                     <article id="Academics" class="mt-0">
-                        <h3>Extracurricular Examples - Sports</h3>
+                        <h2>Extracurricular Examples - Sports</h2>
                         <p>Extracurricular sports provide many opportunities for students to increase their physical activity while enhancing their teamwork skills. Engaging in extracurricular sports activities can positively affect your academic performance and mental health by allowing you to manage your time more efficiently and train your stamina and focus. There are many sports and recreation extracurricular activities that you can participate in such as:  </p>
                         <ul>
                             <li>Basketball</li>
