--- a/arts.html
+++ b/arts.html
@@ -66,7 +66,7 @@
     <div class="hero" data-theme="dark" style="background-image: url('images/gradient-2.svg');">
       <nav class="container-fluid">
         <ul>
-          <li><a href="index.html" class="contrast"><img class="max_width_40" alt="logo" src="images/logo.png"></a></li>
+          <li><a href="index.html" class="contrast"><img class="max_width_40" alt="HitAndMatch logo" src="images/logo.png"></a></li>
         </ul>
         <ul>
           <li><a class="bolts" href="index.html">Home</a></li>
@@ -90,7 +90,7 @@
         <div>
 
           <article id="Academics" class="mt-0">
-            <h3>Extracurricular Examples - Arts</h3>
+            <h2>Extracurricular Examples - Arts</h2>
             <p class="light-text">Arts is the foundation of our cultural milieu and having artistic activities as extracurricular examples serve to highlight all-around personality development. Here are a few extracurricular activities examples that are based on the arts.</p>
             <ul>
               <li>Art club</li>
@@ -108,7 +108,7 @@
         </div>
 
         <aside>
-          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/painting.jpg" alt="Painting"></a>
+          <a href="#" aria-label="Example" onclick="event.preventDefault()"><img src="images/painting.jpg" alt="Girl Painting"></a>
           <p>
             <a href="#" onclick="event.preventDefault()">Painting</a><br>
             <small>Painting allows students to improve their fine motor skills and improve their creativity. </small>
